--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <div>Title <br> <input type="text" name="title" id="title" class="title"></div>
                             <div>Author <br> <input type="text" name="author" id="author" class="author"></div>
                             <div>Pages <br> <input type="text" name="pages" id="pages" class="pages"></div>
-                            <input type="button" value="ADD A NEW BOOK" id="addbook">
+                            <input type="button" value="ADD BOOK" id="addbook">
                         </form>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
             </main>
         </div>
         <div class="footer">
-            <footer>Created By @ayush_anilan</footer>
+            <footer>Created By @ayush_anilan</a></footer>
         </div>
     </div>
     <script src="script.js" defer></script>
